# argparse-typegen

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
src/argparse_typegen/: __main__.py  cli.py  cli_args.py  execeval.py  typegen.py
